--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Source+Code+Pro:ital,wght@0,200..900;1,200..900&display=swap"
         rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Concert+One&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&family=Concert+One&display=swap"
+        rel="stylesheet">
+
+
 
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
@@ -50,7 +55,7 @@
     <div class="container content" id="content">
         <div class="row p-5">
             <div class="col-sm-12 d-flex flex-column text-center">
-                <h3 id="type1">Hai, Raniyah...</h3>
+                <h3 id="type1">Hai Manusia baik..</h3>
                 <p>Happy Birthday 22 <span style="font-size: 0.7em;">th</span></p>
                 <div class="d-flex flex-row arrow align-items-center justify-content-around">
                     <div class="a1 p-1"><i class="fa fa-arrow-down" aria-hidden="true"></i></div>
@@ -66,8 +71,8 @@
                 <img src="assets/photo/section1.jpg" alt="" class="img-fluid rounded">
             </div>
             <div class="col-sm-12 col-md-6 py-2" data-aos="fade-left" data-aos-duration="1500">
-                <p>Di hari yang istimewa ini, aku ingin mengucapkan selamat ulang tahun yang penuh kebahagiaan untukmu, Raniyah. Semoga
-                senyum ceriamu selalu menghiasi hari-harimu.</p>
+                <p>ternyata manusia paling mageran bisa ulang tahun juga yaa? umur berapa 32 ya? hahaha bercanda
+                    gausah cemberut gitu dong bacanya. Senyum dulu dongg biar aku lanjutttt</p>
             </div>
         </div>
         <div class="row py-5">
@@ -75,9 +80,7 @@
                 <img src="assets/photo/section2.jpg" alt="" class="img-fluid rounded">
             </div>
             <div class="col-sm-12 col-md-6 py-2" data-aos="fade-left" data-aos-duration="1500">
-                <p>Dirimu seperti warna peach yang berada pada bajumu. Selalu membawa kedamaian dan kenyamanan bagi
-                orang-orang di sekitarmu. Semoga di usia yang baru ini, kamu terus menyebarkan kehangatan dan kebahagiaan kepada semua
-                orang yang kamu temui..</p>
+                <p>Udahh? gituu donggg senyum kan hari ini hari ulang tahunmu masa mau cemberutt teruss</p>
             </div>
         </div>
         <div class="row py-5">
@@ -85,8 +88,10 @@
                 <img src="assets/photo/section3.jpg" alt="" class="img-fluid rounded">
             </div>
             <div class="col-sm-12 col-md-6 py-2" data-aos="fade-left" data-aos-duration="1500">
-                <p>Mengingat semua momen yang telah kita lalui, aku merasa sangat beruntung bisa mengenalmu. Semoga ulang tahunmu kali ini
-                penuh dengan kenangan indah yang tak terlupakan.</p>
+                <p>Selamat bertambah usia ya manusia baikk, manusia cantik, manusia cerdas, manusia manis
+                    yang suka hal-hal sederhana, kamu manusia yang istemewa. Semoga panjang umur
+                sehat selalu semoga kamu terus dikelilingi orang baik, apapun yang sedang
+            kamu usahakan semoga terusahakan dengan baik.</p>
             </div>
         </div>
         <div class="row py-5">
@@ -94,8 +99,10 @@
                 <img src="assets/photo/section4.jpg" alt="" class="img-fluid rounded">
             </div>
             <div class="col-sm-12 col-md-6 py-2" data-aos="fade-left" data-aos-duration="1500">
-                <p>Dalam setiap kesedihan, selalu ada cahaya yang menyinari. Senyumanmu adalah cahaya itu, Teruslah menjadi inspirasi
-                bagi banyak orang dengan kebaikan dan kecantikan hatimu.</p>
+                <p>Semoga dengan bertambahnya usia kamu menjadi awal yang lebih baik dari sebelumnya, dan 
+                    semoga dengan bertambah usia juga kamu bisa berpikir betapa hebatnya dirimu buat orang
+                    di sekitar, kan kamu sendiri yang bilang kan "kalo gaada aku, acaranya gak seru" kedepannya kamu
+                    ndak bolehhhh insecure insecure lagiiiiii yaahhhh yaahhhh.</p>
             </div>
         </div>
         <div class="row py-5">
@@ -103,7 +110,9 @@
                 <img src="assets/photo/section5.jpg" alt="" class="img-fluid rounded">
             </div>
             <div class="col-sm-12 col-md-6 py-2" data-aos="fade-left" data-aos-duration="1500">
-                <p>Masa lalu adalah pijakan kamu untuk menata masa depan, jangan terlalu sering melihat kebelakang. Hadapi masa depan dengan semangat yang membara dan senyumanmu yang mempesona. </p>
+                <p>Ohh iyaa maapin akuu yaa ran, kayak yang aku pernah bilang ke kamu, maapin aku selalu ngajak kamu main, tapi
+                    aku sendiri gatau kesibukanmu seperti apa, maapin aku juga kalo aku bikin kamu gak nyaman
+                    sekali lagi aku minta maaf yahh. </p>
             </div>
         </div>
         <div class="row py-5">
@@ -111,8 +120,10 @@
                 <img src="assets/photo/section6.jpg" alt="" class="img-fluid rounded">
             </div>
             <div class="col-sm-12 col-md-6 py-2" data-aos="fade-left" data-aos-duration="1500">
-                <p>Pesonamu adalah sesuatu yang tak pernah pudar. Dalam setiap tatapan dan senyumanmu, selalu ada kehangatan yang
-                kurasakan. Teruslah bersinar dengan segala keindahan yang kamu miliki. Selamat ulang tahun yang ke-22... </p>
+                <p>Tauu gak sihh, aku beruntung bangett bisa kenal sama kamu ran, yaa meskipun kita belum kenal lama tapi aku tiap
+                    kali liat atau ketemu sama kamu tuhh seneng bangeett, senengg gituu ketemu orang sebaik dan sehebat raniyaahh,
+                    ingett yaahh ndak bolehh insecure lagiiiii!.
+                     </p>
             </div>
         </div>
         <div class="row py-5">
@@ -120,9 +131,12 @@
                 <img src="assets/photo/section7.jpg" alt="" class="img-fluid rounded">
             </div>
             <div class="col-sm-12 col-md-6 py-2" data-aos="fade-left" data-aos-duration="1500">
-                <p>Aku berharap tahun-tahun mendatang membawa lebih banyak kebahagiaan, kesuksesan, dan cinta dalam hidupmu. Teruslah
-                menjadi diri sendiri, karena kamu adalah orang yang luar biasa. Selamat ulang tahun yang ke 22 Raniya...
-                </p>
+                <p>Apalagi yaa? akuu bingungg tau ndak pandai merangkai kata, tapi semoga ulang tahun kamu sekarang
+                    berkesan senangg yaa!, panjangg umur orang baikk dan sehatt selaluu, jangan pernah ngerasa insecure lagi ya!
+                kamu hebaattt kamuuu istimewaa, Sekali lagi Happy birthday raniyah putri yang baikk yang cantik yang hebattt!
+            Tetep semangaatt yaaa. </p><p>
+                Ehh iyaa satu lagi, Let's make again another photo from another place leoo!!!  
+            </p>
             </div>
         </div>
     </div>
